PROD-12-18-19/force-app/main/default/objects/Expenses__c/fields/Category_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Work__c</fullName>
    <description>Expert witness or consultant, Grass-roots (i.e., direct mail or phone solicitation), Media (print or electronic advertising), Polling, Lobbying, Other</description>
    <inlineHelpText>Expert witness or consultant, Grass-roots (i.e., direct mail or phone solicitation), Media (print or electronic advertising), Polling, Lobbying, Other</inlineHelpText>
    <label>Category of Work</label>
    <type>TextArea</type>
</CustomField>