PROD-12-18-19/force-app/main/default/objects/Expenses__c/fields/Description_of_Expense__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Expense__c</fullName>
    <label>Description of Expense</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>