PROD-12-18-19/force-app/main/default/objects/Expenses__c/fields/Expense_Owner__c.field-meta.xml
<CustomField>
    <fullName>Expense_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ExpensesUser</relationshipName>
    <type>Lookup</type>
</CustomField>