PROD-12-18-19/force-app/main/default/objects/Expenses__c/fields/Place_of_event__c.field-meta.xml
<CustomField>
    <fullName>Place_of_event__c</fullName>
    <label>Place of event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>