PROD-12-18-19/force-app/main/default/objects/Expenses__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Description_of_Expense__c</columns>
    <columns>Expense_Owner__c</columns>
    <columns>Expense_Type__c</columns>
    <columns>Invoiced_Amount__c</columns>
    <columns>Name_and_addresses_of_all_participants__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>